<resources>
    <string name="app_name">Whac-A-Mole</string>
    <string name="whack_as_many_moles_as_you_can">Whack as many moles as you can!</string>
    <string name="your_record">Your record score:</string>
    <string name="play">Play</string>
    <string name="record_score">Record score:</string>
    <string name="your_score">Your score:</string>
    <string name="new_record">New record!</string>
    <string name="play_again">Play again</string>
    <string name="menu">Menu</string>
    <string name="timer">0:</string>
    <string name="_0">0</string>

</resources>